# website

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: Cargo.toml  deny.toml
backend/.sqlx/: query-00c2538b7eb9f7fdd0e3a9989391134e86f65e2cbbe158fd858d6d06f0ae73fc.json  query-02a07e96b6a890e389ed3f628f533ab37e33e42aa374761eaeb20aeb62d807e3.json  query-02f35ea4f6cbc9eddd4136264a1c7c3632a7fc49ba946b1f6286e230dde8fbd4.json  query-036486eec32ca848248eb5cfea9c7dd0e558ef9e80e0d47ff6ebabdb9ed8ea0a.json  query-060ee7912fa57e0638282f19ad8923bb3bdcff0e2d93354e4368ca0137466395.json  query-0a06dc31d7fa0fd0bd1e1daa7ee7e0dd261418679052993e9c3ee9301734f046.json  query-0a9e08b28dd6eff542e7660d27646f2eabd333f1b72e0e5854b02c32c83c7dfa.json  query-0b63204a3f7c9f31d18683dea34d3dffebfb8c17143fc43f66d29c75bcd599a3.json  query-0c9237d4669738125ebec46a67c3d85e9ff9d9988b2e3cc1b86dbbace4512c94.json  query-0e212ac89680b5dbffd7136d5347b9cf5f4cd9d0cae77948a93b62242a087b24.json  query-0e2bf21ea5632a67b1590196a70b48d18cea7db9cc450661d7391592cc13b8c9.json  query-0e6b47c30ec75b75ef6de418b2111f42e9ea82b34f724a739798a77241058f4d.json  query-13d7c7ba089f098854790e709def4c0bb193205afacca0c4a1eeb3ae8b8b4849.json  query-15b672e30f4e82799d71cc34764337f096ab31f4e733554a61e435bad4dddb21.json  query-1661e6cde91695812dfb092e5a4e5d86388fef1a6556067f02e31fc7f61a2ef8.json  query-1a42aad7f18bbc9acaf2498850978ac032412bd1c5317c9e3f1457a509153818.json  query-1b1d9d9ac8fb0e401b40391c7e34b8128bd58aacc1e14e1c2937d25055598fdf.json  query-1ba0e7a3b85fb583896f3674b89f355a92e31313cf1ab9d800075920f73082e4.json  query-1cb5b22789b838b714b506c0f0d853713844c78bb7111e1a431cd229719b3c49.json  query-1cfc5a3c4f7a940a54e3299eb9f93fe397eec2fc7d2e557bed0706ff8c839a36.json  query-1d28dda555ccf379729b5c02fda3d53e8288ebc26da7122e2b061463206ca70f.json  query-232bb7795726d3df9bfe75c6620a19e395ec8821acd76e75ad005b8a1d667297.json  query-235ae98048e5c02f822fc5f1932fa1c2b1c060475021476f14ac99721d5f875e.json  query-23978a345e15d972e86cedb575a6d708419d3bf373ff91622098de6124107dea.json  query-279e68809ea3001363b25bc00d7142382480cbebe74eeaac4277fb7a5655af8c.json  query-2880328aef70ba4f484df8c0c015015b6fe0447fa759ec1167bc4afb59d48d4f.json  query-295e68fe8e700a6e79744267bbf42474b7798204185169706a8f0ad2f4921646.json  query-29927a24cb849b2591995764fe4334d863b14a4be4e77ed85e0dd986edeef797.json  query-2af2c9d44ebfb918ae4c0ded9675771b431205bf66f320eb99dbdde974ede201.json  query-2caf2f1ac0950adeba7a6c7d7f1b2257d565925be76ca6ce6a035ea8920a7777.json  query-2ced8cdcc961541302e3793050a1cc4554783e30f041a30392d3f31161baeee3.json  query-2e01295b0c986655751674efaa2580b7e2b81e7aa79e9da5314e5278c7b6da13.json  query-2e1e1586f40d53207943ab8dff7e6a7a8db3e80a373fe889bd0b7b37193409ec.json  query-30b3b6a613ddfa9abe687d6afb42ebba18aca874ee2c3adfe353df885e34a347.json  query-322188507f73024ebf571c18abd85d22d9b1aaa4c53f2a256015ee70ddbb1800.json  query-3234a37fd7263eee128c1b99313738f0d03bc905e4cbabd6c3061e4fe0d01790.json  query-3344ef2a455d8c78ea2ba4485ceec4c0e8f58cf3ea70ec6cb9b1a296808affe3.json  query-3357623ee42ad14297ae11c172a1e321b129be3d062cdc92a5bfb84520e02caf.json  query-3364460bebcd862545d99933fa59c41be3ea70dd8c6041109b203983e2940271.json  query-38aacb3ccb5616b962e5444ada2e712e6dea36d631c6f4e1fd3c6f32059c80e5.json  (+135 more)
backend/migrations/: 20241026085259_initial_scheme.sql
backend/src/: error.rs  main.rs  router.rs  state.rs
backend/src/api/: activity.rs  committee.rs  event.rs  file.rs  location.rs  material.rs  mod.rs  page.rs  user.rs
backend/src/auth/: mod.rs  role.rs  session.rs
backend/src/data_source/: activity.rs  committee.rs  event.rs  file.rs  location.rs  material.rs  mod.rs  page.rs  user.rs
backend/src/data_source/fixtures/: activity.sql  activity_registration.sql  (+7 more)
backend/src/wire/: activity.rs  committee.rs  event.rs  file.rs  location.rs  material.rs  mod.rs  page.rs  user.rs
(+177 files in other folders)
