[package]
name = "nijsac-website-backend"
publish = false
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.8", features = ["json", "macros", "multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
sqlx = { version = "0.8.6", default-features = false, features = ["json", "postgres", "runtime-tokio", "migrate", "macros", "time", "uuid", "tls-rustls-aws-lc-rs"] }
thiserror = "2.0.17"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
argon2 = "0.5.3"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.16.1"
memory-serve = "1.2.2"
time = { version = "0.3.44", features = ["serde"] }
rand = "0.9.2"
strum_macros = "0.27.2"
object_store = "0.13.0"
bytes = "1.11.0"
mime = "0.3.17"
image = { version = "0.25.9", default-features = false, features = ["webp", "jpeg", "png"] }
derive_more = { version = "2.1.1", features = ["as_ref", "display", "from", "from_str", "into"] }