[package]
name = "nijsac-website-backend"
publish = false
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
axum = { version = "0.8.9", features = ["json", "macros", "multipart"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
sqlx = { version = "0.8.6", default-features = false, features = ["json", "postgres", "runtime-tokio", "migrate", "macros", "time", "uuid", "tls-rustls"] }
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v7", "serde"] }
argon2 = "0.5.3"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.19.0"
memory-serve = "2.1.0"
time = { version = "0.3.47", features = ["serde"] }
rand = "0.10.1"
strum_macros = "0.28.0"
object_store = "0.13.2"
bytes = "1.11.1"
mime = "0.3.17"
image = { version = "0.25.10", default-features = false, features = ["webp", "jpeg", "png"] }
derive_more = { version = "2.1.1", features = ["as_ref", "display", "from", "from_str", "into"] }
